--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
     "keywords": ["radius","authentication","authorization","pap","chap","ms-chap","ms-chap v2","rfc2865","rfc1994","rfc2284","rfc2869","rfc2759"],
     "homepage": "https://github.com/dapphp/radius",
     "require": {
-        "php": ">=5.3 || <= 7.4"
+        "php": "^7.3 || ^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8"
+        "phpunit/phpunit": "^9.5.13"
     },
     "suggest": {
         "ext-openssl": "To support hashing required by Pear_CHAP"
@@ -26,9 +26,9 @@
         }
     ],
     "autoload": {
-	"psr-0": {
+        "psr-0": {
             "Crypt_CHAP_": "lib/"
-	},
+        },
         "psr-4": {
             "Dapphp\\Radius\\": "src/"
         }
